<resources>
    <string name="app_name">Party Popper</string>
    <string name="action_search">Search</string>
    <string name="action_search_events">Event name</string>
    <string name="action_search_organizers">Organizers</string>
    <string name="action_search_date">Start date</string>
    <string name="action_search_attendees">Attendance</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort_hottest">Hottest</string>
    <string name="action_sort_nearest">Nearest</string>
    <string name="action_sort_favorites">Favorites</string>
    <string name="action_sort_alphabetical">A-Z</string>
    <string name="action_open_business_activity">Become organizer</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sort_startdate">Sort by start date</string>
    <string name="action_sort_attendees">Sort by Attendees</string>
    <string name="action_sort_distance">Sort by distance</string>

    <string name="auth_login_head">Login to your Account</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_login_button">Login</string>
    <string name="auth_register_button">Register</string>
    <string name="auth_forgot_password">Forgot password</string>
    <string name="auth_or">OR</string>

    <string name="separator_point">\u2022</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="block_organizer">Block organizer</string>
    <string name="blocked_organizer">Blocked organizer</string>
    <string name="attend_to_event">Attend</string>
    <string name="attending_to_event">Attending</string>

    <string name="organizer_tab_text_1">Info</string>
    <string name="organizer_tab_text_2">Current Events</string>
    <string name="fav_organizer">Follow</string>
    <string name="unfav_organizer">Followed</string>
    <string name="rate_organizer">Rate</string>
    <string name="organizer_rate_dialog_title">Rate</string>
    <string name="organizer_rate_dialog_tag">Rate dialog</string>

    <string name="dialog_negative_button">Cancel</string>
    <string name="organizer_rate_dialog_positive_button">Send</string>

    <string name="attendees">attendees</string>
    <string name="are_attending">are attending</string>

    <string name="event_attended">Attending the event</string>
    <string name="event_left">Not attending the event anymore</string>

    <string name="organizer_rated">Updated your rating of the organizer to </string>
    <string name="organizer_blocked">Blocked this organizer</string>
    <string name="organizer_unblocked">Unblocked this organizer</string>

    <string name="placeholder">-</string>

    <string name="wrong_url">Cannot open the URL, something is wrong with it</string>

    <string name="copied">Copied to clipboard</string>
    <string name="copied_address">Copied the address to clipboard</string>

    <string name="action_organizer_fav">Follow</string>

    <string name="error_location_permission_needed">The application needs the location permission to work!</string>

    <string name="app_bar_create_event">Create event</string>
    <string name="app_bar_become_organizer">Become organizer</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="event_text">
        "Music: All Killer No Filler\n\n"

        "von 22 bis 23 Uhr Eintritt nur 1€, anschließend 6,- € !\n"
        "50% weniger Eintritt für Studenten die ganze Nacht!\n\n"

        "Specials: alle Getränke außer Cocktails die ganze Nacht 2 Euro.\n\n"

        "[Main]: Machine Head, Bring Me The Horizon, August Burns Red, Limp Bizkit, Bodycount, Skindred, Rammstein, Papa Roach, Caliban, Broilers, Ramones, In Flames, Airbourne, Amon Amarth, Slayer, usw. usw.\n\n"

        "[Church]: MEGADETH, AC/DC, KISS, GUNS N ROSES, METALLICA, SCORPIONS, WHITESNAKE, DEEP PURPLE, LED ZEPPELIN, JOAN JETT, THE SWEET, T REX usw.usw.\n\n"

        "[Atomix]: Melissa Etheridge, Bob Marley, Gentleman, Seed, Madonna, Placebo, DM, Lady GAGA, Prince, Jamiroquai, usw.usw.\n\n"

        "[X1] Spezialitäten- und Kaffee-Lounge und gr. Biergarten\n\n"

        "Einlass ab 16 Jahren (mehr infos hier: https://x-herford.de/erziehungsauftrag/ )"
    </string>
    <string name="action_event_open_image">action_event_open_image</string>
    <string name="action_event_share">action_event_share</string>

    <string name="logo_business">Business Logo</string>
    <string name="upload_image_business">update image</string>
    <string name="public_information_business">Public Information</string>
    <string name="name_business">Business Name</string>
    <string name="website_business">Website</string>
    <string name="phone_business">Phone Number</string>
    <string name="address_business">Address</string>
    <string name="private_information_business">Private Information</string>
    <string name="description_business">Description</string>
    <string name="email_business">E-Mail</string>
    <string name="request_business">Request</string>

    <string name="information_publish">Information</string>
    <string name="information_duration">Duration</string>
    <string name="title_publish">Title</string>
    <string name="reflink_publish">Reference link</string>
    <string name="startdate_publish">Start date</string>
    <string name="starttime_publish">Start Time</string>
    <string name="enddate_publish">End date</string>
    <string name="endtime_publish">End Time</string>
    <string name="description_publish">Description</string>
    <string name="description_hint_publish">Description</string>
    <string name="publish_event_button_publish">Publish event</string>
</resources>
