<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.partypopper.app.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_hottest"
        android:orderInCategory="99"
        android:title="@string/action_sort_hottest"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_nearest"
        android:orderInCategory="98"
        android:title="@string/action_sort_nearest"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_favorites"
        android:orderInCategory="97"
        android:title="@string/action_sort_favorites"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_alphabetical"
        android:orderInCategory="96"
        android:title="@string/action_sort_alphabetical"
        app:showAsAction="never" />
</menu>
