<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/businessImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_business"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin"
        android:text="@string/upload_image_business" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/public_information_business"
        android:textSize="@dimen/title_h5" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#494949" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_layout_margin"
        android:layout_marginRight="@dimen/horizontal_layout_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/businessNamePlaneTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_keyboard_arrow_up_white_trans30_24dp"
            android:ems="10"
            android:hint="@string/name_business"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_layout_margin"
        android:layout_marginRight="@dimen/horizontal_layout_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/websitePlainTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_link_white_trans30_24dp"
            android:ems="10"
            android:hint="@string/website_business"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_layout_margin"
        android:layout_marginRight="@dimen/horizontal_layout_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/phoneNumberView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_local_phone_white_trans30_24dp"
            android:hint="@string/phone_business"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_layout_margin"
        android:layout_marginRight="@dimen/horizontal_layout_margin"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/addressView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_place_white_trans30_24dp"
            android:ems="10"
            android:hint="@string/address_business"
            android:inputType="textPostalAddress" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/private_information_business"
        android:textSize="@dimen/title_h5" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#494949" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_layout_margin"
        android:layout_marginRight="@dimen/horizontal_layout_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/emailView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@android:drawable/ic_menu_send"
            android:ems="10"
            android:hint="@string/email_business"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <Button
        android:id="@+id/requestBusinessButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:text="@string/request_business" />

</LinearLayout>