<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/text_margin">

    <ImageView
        android:layout_width="@dimen/auth_Iv_size"
        android:layout_height="@dimen/auth_Iv_size"
        android:src="@drawable/icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginBottom="@dimen/text_margin_4"
        android:layout_marginTop="@dimen/text_margin"
        style="@android:style/TextAppearance.DeviceDefault.Large"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/FilledTextFieldDense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:hint="@string/auth_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/auth_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/FilledTextFieldDense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:hint="@string/auth_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/auth_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/text_margin_4"
        android:layout_marginBottom="@dimen/button_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/auth_email_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin"
            android:text="@string/auth_login_button"
            android:layout_weight="1" />

        <Button
            android:id="@+id/auth_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_margin"
            android:text="@string/auth_register_button"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/auth_forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/auth_forgot_password"
        android:textAllCaps="false"
        style="@style/OutlinedButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="OR" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/auth_google_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>