<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/pubUpdateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin"
        android:text="@string/upload_image_business" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#494949" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/information_publish"
        android:textSize="@dimen/title_h5" />

    <EditText
        android:id="@+id/pubTitlePt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:drawableStart="@drawable/ic_title_black_24dp"
        android:drawablePadding="@dimen/drawable_padding"
        android:ems="10"
        android:hint="@string/title_publish"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/pubDateD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:drawableStart="@drawable/ic_today_white_trans30_24dp"
        android:drawablePadding="@dimen/drawable_padding"
        android:ems="10"
        android:hint="@string/date_publish"
        android:inputType="date" />

    <EditText
        android:id="@+id/pubTimeT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:drawableStart="@drawable/ic_access_time_white_trans30_24dp"
        android:drawablePadding="@dimen/drawable_padding"
        android:ems="10"
        android:hint="@string/time_publish"
        android:inputType="time" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#494949" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/description_publish"
        android:textSize="@dimen/title_h5" />

    <EditText
        android:id="@+id/pubDescriptionMt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_hint_publish"
        android:inputType="textMultiLine" />
</LinearLayout>